adjusting image extension

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				<a class="page-scroll" href="#about">About</a>
 			</li>
 			<li>
-				<a href="#">CV</a>
+				<a target="_blank" href="https://www.dropbox.com/s/isxzot3cu2rrqk9/mariano_resume_sep17.pdf?dl=0">CV</a>
 			</li>
 			<!--li>
 				<a class="page-scroll" href="#portfolio">Portfolio</a>
@@ -91,7 +91,7 @@
 					I'm a User Experience Designer from Brazil, currently working within the <a target="_blank" href="http://usitue.nl/">User System Interaction program at TU/e</a>. For the past four years, I've been  <a target="_blank" href="http://ieeexplore.ieee.org/document/6880985/">designing assistive technologies solutions</a> for people with communication disorders. I'm inspired to create new solutions that can empower people's life. To support my skills as a UX professional, I have a background in Biomedical and Electrical Engineering!
 				</p>
 				<p>
-					<a href="#" class="btnghost"><i class="fa fa-download"></i> Curriculum Vitae</a>
+					<a target="_blank" href="https://www.dropbox.com/s/isxzot3cu2rrqk9/mariano_resume_sep17.pdf?dl=0" class="btnghost"><i class="fa fa-download"></i> Curriculum Vitae</a>
 				</p>
 			</div>
 		</div>
