--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                     <i class="fa fa-puzzle-piece fa-stack-1x fa"></i>
                 </span>
                 <h4 class="service-heading">Strategy</h4>
-                <p class="text-muted">Design Thinking, Agile Methodologies, Design Sprints</p>
+                <p class="text-muted">Design Thinking, Agile, Design Sprints</p>
             </div>  
         </div>
         <div class="row text-center">
