--- a/_dev/index.html
+++ b/_dev/index.html
@@ -91,7 +91,7 @@
 </header>
 
 <!-- About Section -->
-<section id="about">
+<section id="about" class="bg-white">
 	<div class="container content-section text-center">
 		<div class="row">
 			<h2>ABOUT ME</h2>
@@ -109,7 +109,7 @@
 
 
 <!-- Portfolio Grid Section -->
-<!--section id="portfolio" class="p-0">
+<section id="portfolio" class="p-0">
     <div class="container content-section text-center">
     	<div class="row">
        		<div class="col-lg-12 text-center">
@@ -118,13 +118,13 @@
            	</div>
     	</div>
         <div class="row no-gutter popup-gallery">
-          	<div class="col-lg-4 col-sm-6">
+          	<!--div class="col-sm-6">
             	<a class="portfolio-box" href="project_smarttable.html">
-              	<img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="">
+              	<img class="img-fluid" src="img/dashboard/tb.png" alt="">
               	<div class="portfolio-box-caption">
                 	<div class="portfolio-box-caption-content">
                   		<div class="project-category text-faded">
-                    		Category
+                    		Seniors, Smart-Table, IOT
                   		</div>
                   		<div class="project-name">
                     		Smart Table for Seniors
@@ -132,24 +132,39 @@
                 	</div>
               	</div>
             	</a>	
-          	</div>
-	        <div class="col-lg-4 col-sm-6">
-	            <a class="portfolio-box" href="img/portfolio/fullsize/2.jpg">
-	              	<img class="img-fluid" src="img/portfolio/thumbnails/2.jpg" alt="">
+          	</div-->
+	        <div class="col-sm-6">
+	            <a class="portfolio-box" href="project_dashboard.html">
+	              	<img class="img-fluid" src="img/dashboard/tb.png" alt="">
 	              	<div class="portfolio-box-caption">
 	                	<div class="portfolio-box-caption-content">
 	                  		<div class="project-category text-faded">
-	                    		Category
+	                    		Data Analysis, Visualization, Internet of Things, Wearables
 	                  		</div>
 	                  		<div class="project-name">
-	                    		Project Name
+	                    		Dashboard for Researchers
 	                  		</div>
 	                	</div>
 	             	 </div>
 	            </a>
 	        </div>
-	        <div class="col-lg-4 col-sm-6">
-	            <a class="portfolio-box" href="img/portfolio/fullsize/3.jpg">
+	        <div class="col-sm-6">
+	            <a class="portfolio-box" href="project_dashboard.html">
+	              	<img class="img-fluid" src="img/aac/tb.png" alt="">
+	              	<div class="portfolio-box-caption">
+	                	<div class="portfolio-box-caption-content">
+	                  		<div class="project-category text-faded">
+	                    		ALS Patients, Augmentative and Alternative Communication, Wearables
+	                  		</div>
+	                  		<div class="project-name">
+	                    		Alternative Communication for people with Severe Motor Dysfunction
+	                  		</div>
+	                	</div>
+	             	 </div>
+	            </a>
+	        </div>
+	        <!--div class="col-lg-4 col-sm-6">
+	            <a class="portfolio-box" href="project_.html">
 	              	<img class="img-fluid" src="img/portfolio/thumbnails/3.jpg" alt="">
 	              	<div class="portfolio-box-caption">
 	                	<div class="portfolio-box-caption-content">
@@ -162,10 +177,10 @@
 	                	</div>
 	              	</div>
 	            </a>
-	        </div>
+	        </div-->
 	    </div>
     </div>
-</section-->
+</section>
 
 
 <!-- Skills Section -->
