--- a/_dev/p_aac.html
+++ b/_dev/p_aac.html
@@ -61,7 +61,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2">
-				<h1 class="brand-heading">Sensor-based Alternative Communication for Disabled People</h1>
+				<h1 class="brand-heading">Alternative Communication for people with Severe Motor Dysfunction</h1>
 				<p class="intro-text">
 					ALS Patients, Augmentative and Alternative Communication, Wearables
 				</p>
