--- a/_dev/project_smarttable.html
+++ b/_dev/project_smarttable.html
@@ -63,7 +63,7 @@
 			<div class="col-md-8 col-md-offset-2">
 				<h1 class="brand-heading">Smart Table for Seniors</h1>
 				<p class="intro-text">
-					ALS Patients, Augmentative and Alternative Communication, Wearables
+					Seniors, Smart-Table, IOT
 				</p>
 				<a href="#single-project" class="btn btn-circle page-scroll">
 				<i class="fa fa-angle-double-down animated"></i>
