Updating new page

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 			<li>
 				<a target="_blank" href="https://www.dropbox.com/s/isxzot3cu2rrqk9/mariano_resume_sep17.pdf?dl=0">CV</a>
 			</li>
-			<!--li>
+			<li>
 				<a class="page-scroll" href="#portfolio">Portfolio</a>
-			</li-->
+			</li>
 			<li>
 				<a class="page-scroll" href="#skills">Skills</a>
 			</li>
@@ -91,7 +91,7 @@
 </header>
 
 <!-- About Section -->
-<section id="about">
+<section id="about" class="bg-white">
 	<div class="container content-section text-center">
 		<div class="row">
 			<h2>ABOUT ME</h2>
@@ -109,63 +109,92 @@
 
 
 <!-- Portfolio Grid Section -->
-<!--section id="portfolio" class="p-0">
+<section id="portfolio" class="p-0">
     <div class="container content-section text-center">
     	<div class="row">
-       		<div class="col-lg-12 text-center">
-               	<h2 class="section-heading">Portfolio</h2>
-               	<h3 class="section-subheading text-muted"></h3>
-           	</div>
-    	</div>
-        <div class="row no-gutter popup-gallery">
-          	<div class="col-lg-4 col-sm-6">
-            	<a class="portfolio-box" href="project_smarttable.html">
-              	<img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="">
-              	<div class="portfolio-box-caption">
-                	<div class="portfolio-box-caption-content">
-                  		<div class="project-category text-faded">
-                    		Category
-                  		</div>
-                  		<div class="project-name">
-                    		Smart Table for Seniors
-                  		</div>
-                	</div>
-              	</div>
-            	</a>	
-          	</div>
-	        <div class="col-lg-4 col-sm-6">
-	            <a class="portfolio-box" href="img/portfolio/fullsize/2.jpg">
-	              	<img class="img-fluid" src="img/portfolio/thumbnails/2.jpg" alt="">
-	              	<div class="portfolio-box-caption">
-	                	<div class="portfolio-box-caption-content">
-	                  		<div class="project-category text-faded">
-	                    		Category
-	                  		</div>
-	                  		<div class="project-name">
-	                    		Project Name
-	                  		</div>
-	                	</div>
-	             	 </div>
-	            </a>
-	        </div>
-	        <div class="col-lg-4 col-sm-6">
-	            <a class="portfolio-box" href="img/portfolio/fullsize/3.jpg">
-	              	<img class="img-fluid" src="img/portfolio/thumbnails/3.jpg" alt="">
-	              	<div class="portfolio-box-caption">
-	                	<div class="portfolio-box-caption-content">
-	                  		<div class="project-category text-faded">
-	                    		Category
-	                  		</div>
-	                  		<div class="project-name">
-	                    		Project Name
-	                  		</div>
-	                	</div>
-	              	</div>
-	            </a>
-	        </div>
+    		<h2>Portfolio</h2>
+
+       		<div class="col-lg-8 col-lg-offset-2">
+      			<p>These are some of the works that I've been working recently.</p>
+      			<p></p>
+       		</div>
+	        <div class="row no-gutter popup-gallery">
+	          	<div class="col-sm-6">
+	            	<a class="portfolio-box" href="#">
+		              	<img class="img-fluid" src="img/st/tb.jpg" alt="">
+		              	<div class="portfolio-box-caption">
+		                	<div class="portfolio-box-caption-content">
+		                  		<div class="project-category text-faded">
+		                    		Seniors, Smart-Table, IoT
+		                  		</div>
+		                  		<div class="project-name">
+		                    		Smart Table for Seniors
+		                  		</div>
+		                	</div>
+		              	</div>
+		              	<h4 class="projname">Smart Table for Seniors</h4>
+		                <h6 class="projdesc">Seniors, Smart-Table, IoT</h6>
+	            	</a>	
+	          	</div>
+		        <div class="col-sm-6">
+		            <a class="portfolio-box" href="#">
+		              	<img class="img-fluid" src="img/dashboard/tb.png" alt="">
+		              	<div class="portfolio-box-caption">
+		                	<div class="portfolio-box-caption-content">
+		                  		<div class="project-category text-faded">
+		                    		Data Analysis, Visualization, IoT, Wearables
+		                  		</div>
+		                  		<div class="project-name">
+		                    		Dashboard for Researchers
+		                  		</div>
+		                	</div>
+		             	 </div>
+		             	<h4 class="projname">Dashboard for Researchers</h4>
+		                <h6 class="projdesc">Data Analysis, Visualization, IoT, Wearables</h6>
+		            </a>
+		        </div>
+		        
+		    </div>
+		    <br>
+		    <div class="row no-gutter popup-gallery">
+			    <div class="col-sm-6">
+			            <a class="portfolio-box" href="#">
+			              	<img class="img-fluid" src="img/aac/tb.png" alt="">
+			              	<div class="portfolio-box-caption">
+			                	<div class="portfolio-box-caption-content">
+			                  		<div class="project-category text-faded">
+			                    		ALS Patients, Augmentative and Alternative Communication, Wearables
+			                  		</div>
+			                  		<div class="project-name">
+			                    		Alternative Communication for people with Severe Motor Dysfunction
+			                  		</div>
+			                	</div>
+			             	 </div>
+			             	 <h4 class="projname">Alternative Communication for people with Severe Motor Dysfunction</h4>
+		              		 <h6 class="projdesc">ALS Patients, AAC, Wearables</h6>
+			            </a>
+			    </div>
+		        <div class="col-sm-6">
+		            <a class="portfolio-box" href="#">
+		              	<img class="img-fluid" src="img/icu/tb.png" alt="">
+		              	<div class="portfolio-box-caption">
+		                	<div class="portfolio-box-caption-content">
+		                  		<div class="project-category text-faded">
+		                    		User Interface, Healthcare, IOT
+		                  		</div>
+		                  		<div class="project-name">
+		                    		Multi-patient vital signs monitoring center for ICU's
+		                  		</div>
+		                	</div>
+		              	</div>
+		              	<h4 class="projname">Multi-patient vital signs monitoring center for ICU's</h4>
+		              	<h6 class="projdesc">User Interface, Healthcare, IOT</h6>
+		            </a>
+		        </div>
+		    </div>
 	    </div>
     </div>
-</section-->
+</section>
 
 
 <!-- Skills Section -->
