--- a/p_aac.html
+++ b/p_aac.html
@@ -59,7 +59,7 @@
 <!-- /.container -->
 </nav>
 <!-- Intro Header -->
-<header class="intro aacsoft">
+<header class="intro aac">
 <div class="intro-body">
 	<div class="container">
 		<div class="row">
