--- a/p_aac.html
+++ b/p_aac.html
@@ -126,7 +126,7 @@
 	          	</div>
 		        <div class="col-sm-6">
 		            <a class="portfolio-box" href="project_dashboard.html">
-		              	<img class="img-fluid" src="img/dashboard/tb.png" alt="">
+		              	<img class="img-fluid" src="img/db/tb.png" alt="">
 		              	<div class="portfolio-box-caption">
 		                	<div class="portfolio-box-caption-content">
 		                  		<div class="project-category text-faded">
