--- a/aac.html
+++ b/aac.html
@@ -80,17 +80,25 @@
 <section id="single-project" class="bg-white">
 <div class="container content-section text-center">
 	<div class="row">
-		<h2>STEPS OF PROJECT</h2>
+		<h2>Summary</h2>
 		<div class="col-lg-8 col-lg-offset-2">
-			<p>
-				Describe project here, add some images etc. Praesent ac dignissim diam. Aliquam lobortis elit et sapien eleifend, at sollicitudin metus elementum. Morbi imperdiet id ipsum at tristique. Nam suscipit tristique sem, <a href="#">quis</a> laoreem.
+			<p class="text-left">
+				<b>Date:</b> January 2014 to July 2015<br>
+				<b>Clients:</b> University Hospital of Uberlândia (Brazil), University of Uberlândia (Brazil), Université de Lorraine (France)<br>
+				<b>Service:</b> User research, software design, digital prototyping, data analysis<br>
+				<b>Team size:</b> 4 members working directly<br>
+				<b>Duration:</b> 1 year and 7 months<br>
+				<b>Tools used:</b> .NET, WPF, C#, Excel, SPSS<br>
+				<br>
+				<b>My roles:</b> (1) Prototype modules for the software; (2) Prototype IHM control using mechanical and physiological sensors, and microcontrollers; (3) Plan and setup experiments for user tests; (4) Data analysis based on user activity log.<br><br>
+				<b>Results:</b> Develop a prototype that allowed patients with ALS, hospitalized at the university hospital, to communicate with family members, caregivers and doctors.
+				
 			</p>
 			<p>
-				<a href="#" class="btnghost"><i class="fa fa-envelope"></i> Request similar project</a> 
-				<i style="font-size:12px;margin-right:3px;"> or </i> 
-				<a href="index.html#portfolio" class="btnghost"><i class="fa fa-camera"></i> Back to projects gallery</a>
+				<a href="mailto:dtgmariano@gmail.com" class="btnghost"><i class="fa fa-envelope"></i> Request similar project</a>
 			</p>
 		</div>
+
 	</div>
 </div>
 </section>
@@ -108,69 +116,75 @@
       			<p>
       			</p>
        		</div>
-	        <div class="row no-gutter popup-gallery">
+	         <div class="row no-gutter popup-gallery">
 	          	<div class="col-sm-6">
-	            	<a class="portfolio-box" href="project_smarttable.html">
-	              	<img class="img-fluid" src="img/st/tb.jpg" alt="">
-	              	<div class="portfolio-box-caption">
-	                	<div class="portfolio-box-caption-content">
-	                  		<div class="project-category text-faded">
-	                    		Seniors, Smart-Table, IOT
-	                  		</div>
-	                  		<div class="project-name">
-	                    		Smart Table for Seniors
-	                  		</div>
-	                	</div>
-	              	</div>
+	            	<a class="portfolio-box" href="#">
+		              	<img class="img-fluid" src="img/st/tb.jpg" alt="">
+		              	<div class="portfolio-box-caption">
+		                	<div class="portfolio-box-caption-content">
+		                  		<!--div class="project-category text-faded">
+		                    		Seniors, Smart-Table, IoT
+		                  		</div>
+		                  		<div class="project-name">
+		                    		Smart Table for Seniors
+		                  		</div-->
+		                	</div>
+		              	</div>
+		              	<h4 class="projname">Smart Table for Seniors</h4>
+		                <h6 class="projdesc">Seniors, Smart-Table, IoT</h6>
 	            	</a>	
 	          	</div>
 		        <div class="col-sm-6">
-		            <a class="portfolio-box" href="project_dashboard.html">
+		            <a class="portfolio-box" href="#">
 		              	<img class="img-fluid" src="img/db/tb.png" alt="">
 		              	<div class="portfolio-box-caption">
 		                	<div class="portfolio-box-caption-content">
-		                  		<div class="project-category text-faded">
-		                    		Data Analysis, Visualization, Internet of Things, Wearables
+		                  		<!--div class="project-category text-faded">
+		                    		Data Analysis, Visualization, IoT, Wearables
 		                  		</div>
 		                  		<div class="project-name">
 		                    		Dashboard for Researchers
-		                  		</div>
+		                  		</div-->
 		                	</div>
 		             	 </div>
+		             	<h4 class="projname">Dashboard for Researchers</h4>
+		                <h6 class="projdesc">Data Analysis, Visualization, IoT, Wearables</h6>
 		            </a>
 		        </div>
-		        
 		    </div>
-		    <br>
 		    <div class="row no-gutter popup-gallery">
 			    <div class="col-sm-6">
-			            <a class="portfolio-box" href="p_aac.html">
+			            <a class="portfolio-box" href="#">
 			              	<img class="img-fluid" src="img/aac/tb.png" alt="">
 			              	<div class="portfolio-box-caption">
 			                	<div class="portfolio-box-caption-content">
-			                  		<div class="project-category text-faded">
+			                  		<!--div class="project-category text-faded">
 			                    		ALS Patients, Augmentative and Alternative Communication, Wearables
 			                  		</div>
 			                  		<div class="project-name">
 			                    		Alternative Communication for people with Severe Motor Dysfunction
-			                  		</div>
+			                  		</div-->
 			                	</div>
 			             	 </div>
+			             	 <h4 class="projname">Alternative Communication for people with Severe Motor Dysfunction</h4>
+		              		 <h6 class="projdesc">ALS Patients, AAC, Wearables</h6>
 			            </a>
 			    </div>
 		        <div class="col-sm-6">
-		            <a class="portfolio-box" href="project_.html">
+		            <a class="portfolio-box" href="#">
 		              	<img class="img-fluid" src="img/icu/tb.png" alt="">
 		              	<div class="portfolio-box-caption">
-		                	<div class="portfolio-box-caption-content">
+		                	<!--div class="portfolio-box-caption-content">
 		                  		<div class="project-category text-faded">
-		                    		Category
+		                    		User Interface, Healthcare, IOT
 		                  		</div>
 		                  		<div class="project-name">
-		                    		Project Name
+		                    		Multi-patient vital signs monitoring center for ICU's
 		                  		</div>
-		                	</div>
+		                	</div-->
 		              	</div>
+		              	<h4 class="projname">Multi-patient vital signs monitoring center for ICU's</h4>
+		              	<h6 class="projdesc">User Interface, Healthcare, IOT</h6>
 		            </a>
 		        </div>
 		    </div>
@@ -207,13 +221,13 @@
 </section>
 
 <!-- Footer -->
-<footer>
+<!--footer>
 	<div class="container text-center">
 		<p class="credits">
 			&copy; Daniel Mariano 2017
 		</p>
 	</div>
-</footer>
+</footer-->
 
 <!-- jQuery -->
 <script src="js/jquery.js"></script>
