--- a/icu.html
+++ b/icu.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="">
 <meta name="author" content="">
-<title>Dashboard for Researchers - Daniel Mariano</title>
+<title>Multi-patient vital signs monitoring center for ICU's - Daniel Mariano</title>
 <!-- Bootstrap Core CSS -->
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <!-- Custom CSS -->
@@ -38,16 +38,19 @@
 	<div class="collapse navbar-collapse navbar-right navbar-main-collapse">
 		<ul class="nav navbar-nav">
 			<li>
+			<a href="#single-project">Description</a>
+			</li>			
+			<li>
+			<a class="page-scroll" href="#portfolio">Portfolio</a>
+			</li>
+			<li>
+			<a class="page-scroll" href="#contact">Contact</a>
+			</li>
+			<li>
+			<a target="_blank" href="https://www.dropbox.com/s/isxzot3cu2rrqk9/mariano_resume_sep17.pdf?dl=0">CV</a>
+			</li>
+			<li>
 			<a href="index.html">Home</a>
-			</li>
-			<li>
-			<a href="page-sample.html">Portfolio</a>
-			</li>
-			<li>
-			<a href="#">CV</a>
-			</li>
-			<li>
-			<a href="contact.html">Contact</a>
 			</li>
 		</ul>
 	</div>
@@ -56,14 +59,14 @@
 <!-- /.container -->
 </nav>
 <!-- Intro Header -->
-<header class="intro db">
+<header class="intro icu">
 <div class="intro-body">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2">
-				<h1 class="brand-heading">Dashboard for Researchers to Track Data Input from User's Wearables</h1>
+				<h1 class="brand-heading">Multi-patient vital signs monitoring center for ICU's</h1>
 				<p class="intro-text">
-					Data Visualization, Internet of Things, Wearables
+					Healthcare, IOT
 				</p>
 				<a href="#single-project" class="btn btn-circle page-scroll">
 				<i class="fa fa-angle-double-down animated"></i>
@@ -80,8 +83,12 @@
 		<h2>Summary</h2>
 		<div class="col-lg-8 col-lg-offset-2">
 			<p class="text-left">
-				<b>Clients:</b> Onmi, TU/e and DoReach European Consortium<br>
-				<b>Duration:</b> 6 weeks
+				<b>Clients:</b> Intel<br>
+				<b>Duration:</b> 2 weeks<br>
+				<b>Date:</b> October 2013<br>
+				<b>Team size:</b> 3 members<br>
+				<b>My role:</b> Benchmarking, Ideation and Prototype of an User Interface for the System.
+				<b>Tools used:</b> Qt, PyQt, Python 
 			</p>
 			<p>
 				<a href="#" class="btnghost"><i class="fa fa-envelope"></i> Request similar project</a>
@@ -96,22 +103,22 @@
 	<div class="gallery">
 			<ul>
 				<li class="col-md-3">
-					<a href="project_smarttable.html">
-						<img src="img/st/tb.jpg" alt=""></img>
+					<a href="#">
+						<img src="img/st/tb.jpg" alt="">
 					</a>
 				</li>
 				<li class="col-md-3">
-					<a href="project_dashboard.html">
-						<img src="img/dashboard/tb.jpg" alt="">
+					<a href="#">
+						<img src="img/db/tb.jpg" alt="">
 					</a>
 				</li>
 				<li class="col-md-3">
-					<a href="project_aacsoft.html">
-						<img src="img/aacsoft/tb.jpg" alt="">
+					<a href="#">
+						<img src="img/aac/tb.jpg" alt="">
 					</a>
 				</li>
 				<li class="col-md-3">
-					<a href="project_icu.html">
+					<a href="#">
 						<img src="img/icu/tb.jpg" alt="">
 					</a>
 				</li>
