--- a/index.html
+++ b/index.html
@@ -124,12 +124,12 @@
 		              	<img class="img-fluid" src="img/st/tb.jpg" alt="">
 		              	<div class="portfolio-box-caption">
 		                	<div class="portfolio-box-caption-content">
-		                  		<div class="project-category text-faded">
+		                  		<!--div class="project-category text-faded">
 		                    		Seniors, Smart-Table, IoT
 		                  		</div>
 		                  		<div class="project-name">
 		                    		Smart Table for Seniors
-		                  		</div>
+		                  		</div-->
 		                	</div>
 		              	</div>
 		              	<h4 class="projname">Smart Table for Seniors</h4>
@@ -141,33 +141,31 @@
 		              	<img class="img-fluid" src="img/db/tb.png" alt="">
 		              	<div class="portfolio-box-caption">
 		                	<div class="portfolio-box-caption-content">
-		                  		<div class="project-category text-faded">
+		                  		<!--div class="project-category text-faded">
 		                    		Data Analysis, Visualization, IoT, Wearables
 		                  		</div>
 		                  		<div class="project-name">
 		                    		Dashboard for Researchers
-		                  		</div>
+		                  		</div-->
 		                	</div>
 		             	 </div>
 		             	<h4 class="projname">Dashboard for Researchers</h4>
 		                <h6 class="projdesc">Data Analysis, Visualization, IoT, Wearables</h6>
 		            </a>
 		        </div>
-		        
 		    </div>
-		    <br>
 		    <div class="row no-gutter popup-gallery">
 			    <div class="col-sm-6">
 			            <a class="portfolio-box" href="#">
 			              	<img class="img-fluid" src="img/aac/tb.png" alt="">
 			              	<div class="portfolio-box-caption">
 			                	<div class="portfolio-box-caption-content">
-			                  		<div class="project-category text-faded">
+			                  		<!--div class="project-category text-faded">
 			                    		ALS Patients, Augmentative and Alternative Communication, Wearables
 			                  		</div>
 			                  		<div class="project-name">
 			                    		Alternative Communication for people with Severe Motor Dysfunction
-			                  		</div>
+			                  		</div-->
 			                	</div>
 			             	 </div>
 			             	 <h4 class="projname">Alternative Communication for people with Severe Motor Dysfunction</h4>
@@ -178,14 +176,14 @@
 		            <a class="portfolio-box" href="#">
 		              	<img class="img-fluid" src="img/icu/tb.png" alt="">
 		              	<div class="portfolio-box-caption">
-		                	<div class="portfolio-box-caption-content">
+		                	<!--div class="portfolio-box-caption-content">
 		                  		<div class="project-category text-faded">
 		                    		User Interface, Healthcare, IOT
 		                  		</div>
 		                  		<div class="project-name">
 		                    		Multi-patient vital signs monitoring center for ICU's
 		                  		</div>
-		                	</div>
+		                	</div-->
 		              	</div>
 		              	<h4 class="projname">Multi-patient vital signs monitoring center for ICU's</h4>
 		              	<h6 class="projdesc">User Interface, Healthcare, IOT</h6>
