--- a/db.html
+++ b/db.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="">
 <meta name="author" content="">
-<title>Sensor-based Alternative Communication for Disabled People - Daniel Mariano</title>
+<title>Dashboard for Researchers - Daniel Mariano</title>
 <!-- Bootstrap Core CSS -->
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <!-- Custom CSS -->
@@ -38,16 +38,19 @@
 	<div class="collapse navbar-collapse navbar-right navbar-main-collapse">
 		<ul class="nav navbar-nav">
 			<li>
+			<a href="#single-project">Description</a>
+			</li>			
+			<li>
+			<a class="page-scroll" href="#portfolio">Portfolio</a>
+			</li>
+			<li>
+			<a class="page-scroll" href="#contact">Contact</a>
+			</li>
+			<li>
+			<a target="_blank" href="https://www.dropbox.com/s/isxzot3cu2rrqk9/mariano_resume_sep17.pdf?dl=0">CV</a>
+			</li>
+			<li>
 			<a href="index.html">Home</a>
-			</li>
-			<li>
-			<a href="page-sample.html">Portfolio</a>
-			</li>
-			<li>
-			<a href="#">CV</a>
-			</li>
-			<li>
-			<a href="contact.html">Contact</a>
 			</li>
 		</ul>
 	</div>
@@ -56,14 +59,14 @@
 <!-- /.container -->
 </nav>
 <!-- Intro Header -->
-<header class="intro aac">
+<header class="intro db">
 <div class="intro-body">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2">
-				<h1 class="brand-heading">Alternative Communication for people with Severe Motor Dysfunction</h1>
+				<h1 class="brand-heading">Dashboard for Researchers to Track Data Input from User's Wearables</h1>
 				<p class="intro-text">
-					ALS Patients, Augmentative and Alternative Communication, Wearables
+					Data Visualization, Internet of Things, Wearables
 				</p>
 				<a href="#single-project" class="btn btn-circle page-scroll">
 				<i class="fa fa-angle-double-down animated"></i>
@@ -77,15 +80,18 @@
 <section id="single-project">
 <div class="container content-section text-center">
 	<div class="row">
-		<h2>STEPS OF PROJECT</h2>
+		<h2>Summary</h2>
 		<div class="col-lg-8 col-lg-offset-2">
-			<p>
-				Describe project here, add some images etc. Praesent ac dignissim diam. Aliquam lobortis elit et sapien eleifend, at sollicitudin metus elementum. Morbi imperdiet id ipsum at tristique. Nam suscipit tristique sem, <a href="#">quis</a> laoreem.
+			<p class="text-left">
+				<b>Clients:</b> Onmi, TU/e and DoReach European Consortium<br>
+				<b>Duration:</b> 6 weeks<br>
+				<b>Date:</b> November 2016<br>
+				<b>Team size:</b> 3 individuals<br>
+				<b>My role:</b> Benchmarking, gather requirements from stakeholders, perform user research, ideation, prototype, user test 
+				<b>Tools used:</b> Tableau, Excel, D3.js, Git
 			</p>
 			<p>
-				<a href="#" class="btnghost"><i class="fa fa-envelope"></i> Request similar project</a> 
-				<i style="font-size:12px;margin-right:3px;"> or </i> 
-				<a href="index.html#portfolio" class="btnghost"><i class="fa fa-camera"></i> Back to projects gallery</a>
+				<a href="#" class="btnghost"><i class="fa fa-envelope"></i> Request similar project</a>
 			</p>
 		</div>
 	</div>
@@ -95,29 +101,29 @@
 <!-- Portfolio -->
 <section id="portfolio">
 	<div class="gallery">
-		<ul>
-			<li class="col-md-3">
-				<a href="project_smarttable.html">
-					<img src="img/st/tb.jpg" alt="">
-				</a>
-			</li>
-			<li class="col-md-3">
-				<a href="project_dashboard.html">
-					<img src="img/dashboard/tb.jpg" alt="">
-				</a>
-			</li>
-			<li class="col-md-3">
-				<a href="project_aacsoft.html">
-					<img src="img/aacsoft/tb.jpg" alt="">
-				</a>
-			</li>
-			<li class="col-md-3">
-				<a href="project_icu.html">
-					<img src="img/icu/tb.jpg" alt="">
-				</a>
-			</li>
-		</ul>
-	</div>
+			<ul>
+				<li class="col-md-3">
+					<a href="#">
+						<img src="img/st/tb.jpg" alt="">
+					</a>
+				</li>
+				<li class="col-md-3">
+					<a href="#">
+						<img src="img/db/tb.jpg" alt="">
+					</a>
+				</li>
+				<li class="col-md-3">
+					<a href="#">
+						<img src="img/aac/tb.jpg" alt="">
+					</a>
+				</li>
+				<li class="col-md-3">
+					<a href="#">
+						<img src="img/icu/tb.jpg" alt="">
+					</a>
+				</li>
+			</ul>
+		</div>
 </section>
 
 <!-- Footer -->
