Adding project AAC

--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
-
 <!-- Navigation -->
 <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
 	<div class="container">
@@ -41,30 +40,28 @@
 			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
 			<i class="fa fa-bars"></i>
 			</button>
-			<a class="navbar-brand page-scroll" href="index.html">
-				Daniel Mariano 
-			</a>
+			<a class="navbar-brand page-scroll" href="index.html">Daniel Mariano</a>
 		</div>
 		<!-- Collect the nav links, forms, and other content for toggling -->
-	<div class="collapse navbar-collapse navbar-right navbar-main-collapse">
-		<ul class="nav navbar-nav">
-			<li>
-				<a class="page-scroll" href="#about">About</a>
-			</li>
-			<li>
-				<a target="_blank" href="https://www.dropbox.com/s/isxzot3cu2rrqk9/mariano_resume_sep17.pdf?dl=0">CV</a>
-			</li>
-			<li>
-				<a class="page-scroll" href="#portfolio">Portfolio</a>
-			</li>
-			<li>
-				<a class="page-scroll" href="#skills">Skills</a>
-			</li>
-			<li>
-				<a class="page-scroll" href="#contact">Contact</a>
-			</li>
-		</ul>
-	</div>
+		<div class="collapse navbar-collapse navbar-right navbar-main-collapse">
+			<ul class="nav navbar-nav">
+				<li>
+					<a class="page-scroll" href="#about">About</a>
+				</li>
+				<li>
+					<a target="_blank" href="https://www.dropbox.com/s/isxzot3cu2rrqk9/mariano_resume_sep17.pdf?dl=0">CV</a>
+				</li>
+				<li>
+					<a class="page-scroll" href="#portfolio">Portfolio</a>
+				</li>
+				<li>
+					<a class="page-scroll" href="#skills">Skills</a>
+				</li>
+				<li>
+					<a class="page-scroll" href="#contact">Contact</a>
+				</li>
+			</ul>
+		</div>
 		<!-- /.navbar-collapse -->
 	</div>
 <!-- /.container -->
@@ -107,30 +104,20 @@
 	</div>
 </section>
 
-
 <!-- Portfolio Grid Section -->
 <section id="portfolio" class="p-0">
     <div class="container content-section text-center">
     	<div class="row">
     		<h2>Portfolio</h2>
-
        		<div class="col-lg-8 col-lg-offset-2">
-      			<p>These are some of the works that I've been working recently.</p>
-      			<p></p>
+      			<p style="margin-bottom: 30px">These are some of the works that I've been working recently.</p>
        		</div>
 	        <div class="row no-gutter popup-gallery">
 	          	<div class="col-sm-6">
 	            	<a class="portfolio-box" href="#">
 		              	<img class="img-fluid" src="img/st/tb.jpg" alt="">
 		              	<div class="portfolio-box-caption">
-		                	<div class="portfolio-box-caption-content">
-		                  		<!--div class="project-category text-faded">
-		                    		Seniors, Smart-Table, IoT
-		                  		</div>
-		                  		<div class="project-name">
-		                    		Smart Table for Seniors
-		                  		</div-->
-		                	</div>
+		                	<!--div class="portfolio-box-caption-content"></div-->
 		              	</div>
 		              	<h4 class="projname">Smart Table for Seniors</h4>
 		                <h6 class="projdesc">Seniors, Smart-Table, IoT</h6>
@@ -140,14 +127,7 @@
 		            <a class="portfolio-box" href="#">
 		              	<img class="img-fluid" src="img/db/tb.png" alt="">
 		              	<div class="portfolio-box-caption">
-		                	<div class="portfolio-box-caption-content">
-		                  		<!--div class="project-category text-faded">
-		                    		Data Analysis, Visualization, IoT, Wearables
-		                  		</div>
-		                  		<div class="project-name">
-		                    		Dashboard for Researchers
-		                  		</div-->
-		                	</div>
+		                	<!--div class="portfolio-box-caption-content"></div-->
 		             	 </div>
 		             	<h4 class="projname">Dashboard for Researchers</h4>
 		                <h6 class="projdesc">Data Analysis, Visualization, IoT, Wearables</h6>
@@ -156,7 +136,7 @@
 		    </div>
 		    <div class="row no-gutter popup-gallery">
 			    <div class="col-sm-6">
-			            <a class="portfolio-box" href="#">
+			            <a class="portfolio-box" href="aac.html">
 			              	<img class="img-fluid" src="img/aac/tb.png" alt="">
 			              	<div class="portfolio-box-caption">
 			                	<div class="portfolio-box-caption-content">
@@ -168,8 +148,8 @@
 			                  		</div-->
 			                	</div>
 			             	 </div>
-			             	 <h4 class="projname">Alternative Communication for people with Severe Motor Dysfunction</h4>
-		              		 <h6 class="projdesc">ALS Patients, AAC, Wearables</h6>
+			             	 <h4 class="projname">AAC for people with severe motor dysfunction</h4>
+		              		 <h6 class="projdesc">ALS, AAC, Prototyping, User Testing, Data Analysis</h6>
 			            </a>
 			    </div>
 		        <div class="col-sm-6">
@@ -193,7 +173,6 @@
 	    </div>
     </div>
 </section>
-
 
 <!-- Skills Section -->
 <section id="skills" class="bg-white">
@@ -258,17 +237,14 @@
 </section>
 
 <!-- Contact Section -->
-<section id="contact">
+<section id="contact" class="bg-white">
 	<div class="container content-section text-center">
 		<div class="row">
 			<div class="col-lg-8 col-lg-offset-2">
 				<h2>Let's get in touch</h2>
-				<p>
-					 	Feel free to contact me!
-				</p>
-				<p>
-					<i><a href="mailto:dtgmariano@gmail.com" style="border-bottom:1px dashed #ccc;">dtgmariano@gmail.com</a></i>
-				</p>
+				<p>Are you interested in my work or wants to talk about one of my projects?<br>Drop me a line!</p>
+				<a href="mailto:dtgmariano@gmail.com" class="btnghost"><i class="fa fa-envelope"></i> dtgmariano@gmail.com</a>
+				<p></p>
 				<ul class="list-inline banner-social-buttons">
 					<li>
 					<a href="https://github.com/dtgmariano" target="_blank" class="btn btnghost btn-lg"><i class="fa fa-github fa-fw"></i><span class="network-name"> Github</span></a>
@@ -284,15 +260,6 @@
 		</div>
 	</div>
 </section>
-
-<!-- Footer -->
-<!--footer>
-	<div class="container text-center">
-		<p class="credits">
-			&copy; Daniel Mariano 2017
-		</p>
-	</div>
-</footer-->
 
 <!-- jQuery -->
 <script src="js/jquery.js"></script>
