--- a/index.html
+++ b/index.html
@@ -74,11 +74,8 @@
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2">
 					<h1 class="brand-heading">Daniel Mariano</h1>
-					<p class="intro-text">
-						UX Designer | Biomedical and Electrical Engineer
-					</p>
-					<br><br><br><br><br><br><br><br><br><br><br><br><br>
-					<a href="#about" class="btn btn-circle page-scroll">
+					<p class="intro-text">UX Designer | Biomedical and Electrical Engineer</p>
+					<a style="margin-top: 180px" href="#about" class="btn btn-circle page-scroll">
 					<i class="fa fa-angle-double-down animated"></i>
 					</a>
 				</div>
@@ -114,17 +111,17 @@
        		</div>
 	        <div class="row no-gutter popup-gallery">
 	          	<div class="col-sm-6">
-	            	<a class="portfolio-box" href="#">
+	            	<a class="portfolio-box">
 		              	<img class="img-fluid" src="img/st/tb.jpg" alt="">
 		              	<div class="portfolio-box-caption">
 		                	<!--div class="portfolio-box-caption-content"></div-->
-		              	</div>
+		             	 </div>
 		              	<h4 class="projname">Smart Table for Seniors</h4>
 		                <h6 class="projdesc">Seniors, Smart-Table, IoT</h6>
 	            	</a>	
 	          	</div>
 		        <div class="col-sm-6">
-		            <a class="portfolio-box" href="#">
+		            <a class="portfolio-box">
 		              	<img class="img-fluid" src="img/db/tb.png" alt="">
 		              	<div class="portfolio-box-caption">
 		                	<!--div class="portfolio-box-caption-content"></div-->
@@ -139,36 +136,22 @@
 			            <a class="portfolio-box" href="aac.html">
 			              	<img class="img-fluid" src="img/aac/tb.png" alt="">
 			              	<div class="portfolio-box-caption">
-			                	<div class="portfolio-box-caption-content">
-			                  		<!--div class="project-category text-faded">
-			                    		ALS Patients, Augmentative and Alternative Communication, Wearables
-			                  		</div>
-			                  		<div class="project-name">
-			                    		Alternative Communication for people with Severe Motor Dysfunction
-			                  		</div-->
-			                	</div>
+			                	<div class="portfolio-box-caption-content"></div>
 			             	 </div>
 			             	 <h4 class="projname">AAC for people with severe motor dysfunction</h4>
 		              		 <h6 class="projdesc">ALS, AAC, Prototyping, User Testing, Data Analysis</h6>
 			            </a>
 			    </div>
 		        <div class="col-sm-6">
-		            <a class="portfolio-box" href="#">
+		            <a class="portfolio-box">
 		              	<img class="img-fluid" src="img/icu/tb.png" alt="">
 		              	<div class="portfolio-box-caption">
-		                	<!--div class="portfolio-box-caption-content">
-		                  		<div class="project-category text-faded">
-		                    		User Interface, Healthcare, IOT
-		                  		</div>
-		                  		<div class="project-name">
-		                    		Multi-patient vital signs monitoring center for ICU's
-		                  		</div>
-		                	</div-->
-		              	</div>
+			                	<div class="portfolio-box-caption-content"></div>
+			             	 </div>
 		              	<h4 class="projname">Multi-patient vital signs monitoring center for ICU's</h4>
 		              	<h6 class="projdesc">User Interface, Healthcare, IOT</h6>
 		            </a>
-		        </div>
+		        </div>	
 		    </div>
 	    </div>
     </div>
