--- a/aac.html
+++ b/aac.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="">
 <meta name="author" content="">
-<title>Sensor-based Alternative Communication for Disabled People - Daniel Mariano</title>
+<title>AAC for people with severe motor dysfunction - Daniel Mariano</title>
 <!-- Bootstrap Core CSS -->
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <!-- Custom CSS -->
@@ -21,86 +21,89 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+<!-- Global Site Tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-105775107-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments)};
+  gtag('js', new Date());
+
+  gtag('config', 'UA-105775107-1');
+</script>
 </head>
+
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 <!-- Navigation -->
 <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
-<div class="container">
-	<div class="navbar-header">
-		<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
-		<i class="fa fa-bars"></i>
-		</button>
-		<a class="navbar-brand page-scroll" href="index.html">
-		Daniel Mariano
-		</a>
+	<div class="container">
+		<div class="navbar-header">
+			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
+			<i class="fa fa-bars"></i>
+			</button>
+			<a class="navbar-brand page-scroll" href="index.html">Daniel Mariano</a>
+		</div>
+		<!-- Collect the nav links, forms, and other content for toggling -->
+		<div class="collapse navbar-collapse navbar-right navbar-main-collapse">
+			<ul class="nav navbar-nav">
+				<li>
+					<a class="page-scroll" href="#single-project">Description</a>
+				</li>			
+				<li>
+					<a class="page-scroll" href="#portfolio">Portfolio</a>
+				</li>
+				<li>
+					<a class="page-scroll" href="#contact">Contact</a>
+				</li>
+				<li>
+					<a target="_blank" href="https://www.dropbox.com/s/isxzot3cu2rrqk9/mariano_resume_sep17.pdf?dl=0">CV</a>
+				</li>
+				<li>
+					<a href="index.html">Home</a>
+				</li>
+			</ul>
+		</div>
+		<!-- /.navbar-collapse -->
 	</div>
-	<!-- Collect the nav links, forms, and other content for toggling -->
-	<div class="collapse navbar-collapse navbar-right navbar-main-collapse">
-		<ul class="nav navbar-nav">
-			<li>
-			<a href="#single-project">Description</a>
-			</li>			
-			<li>
-			<a class="page-scroll" href="#portfolio">Portfolio</a>
-			</li>
-			<li>
-			<a class="page-scroll" href="#contact">Contact</a>
-			</li>
-			<li>
-			<a target="_blank" href="https://www.dropbox.com/s/isxzot3cu2rrqk9/mariano_resume_sep17.pdf?dl=0">CV</a>
-			</li>
-			<li>
-			<a href="index.html">Home</a>
-			</li>
-		</ul>
-	</div>
-	<!-- /.navbar-collapse -->
-</div>
 <!-- /.container -->
 </nav>
+
 <!-- Intro Header -->
 <header class="intro aac">
-<div class="intro-body">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-8 col-md-offset-2">
-				<h1 class="brand-heading">Alternative Communication for people with Severe Motor Dysfunction</h1>
-				<p class="intro-text">
-					ALS Patients, Augmentative and Alternative Communication, Wearables
-				</p>
-				<a href="#single-project" class="btn btn-circle page-scroll">
-				<i class="fa fa-angle-double-down animated"></i>
-				</a>
+	<div class="intro-body">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-8 col-md-offset-2">
+					<h1 class="brand-heading">AAC for people with severe motor dysfunction</h1>
+					<p class="intro-text">ALS, AAC, Prototyping, User Testing, Data Analysis</p>
+					<a style="margin-top: 120px" href="#single-project" class="btn btn-circle page-scroll">
+					<i class="fa fa-angle-double-down animated"></i>
+					</a>
+				</div>
 			</div>
 		</div>
 	</div>
-</div>
 </header>
+
 <!-- Project Details Section -->
 <section id="single-project" class="bg-white">
-<div class="container content-section text-center">
-	<div class="row">
-		<h2>Summary</h2>
-		<div class="col-lg-8 col-lg-offset-2">
-			<p class="text-left">
-				<b>Date:</b> January 2014 to July 2015<br>
-				<b>Clients:</b> University Hospital of Uberlândia (Brazil), University of Uberlândia (Brazil), Université de Lorraine (France)<br>
-				<b>Service:</b> User research, software design, digital prototyping, data analysis<br>
-				<b>Team size:</b> 4 members working directly<br>
-				<b>Duration:</b> 1 year and 7 months<br>
-				<b>Tools used:</b> .NET, WPF, C#, Excel, SPSS<br>
-				<br>
-				<b>My roles:</b> (1) Prototype modules for the software; (2) Prototype IHM control using mechanical and physiological sensors, and microcontrollers; (3) Plan and setup experiments for user tests; (4) Data analysis based on user activity log.<br><br>
-				<b>Results:</b> Develop a prototype that allowed patients with ALS, hospitalized at the university hospital, to communicate with family members, caregivers and doctors.
-				
-			</p>
-			<p>
-				<a href="mailto:dtgmariano@gmail.com" class="btnghost"><i class="fa fa-envelope"></i> Request similar project</a>
-			</p>
+	<div class="container content-section text-center">
+		<div class="row">
+			<h2>Summary</h2>
+			<div class="col-lg-8 col-lg-offset-2">
+				<p class="text-left">
+					<b>Date:</b> January 2014 - July 2015<br>
+					<b>Stakeholders:</b> University Hospital of Uberlândia (Brazil), University of Uberlândia (Brazil), Université de Lorraine (France)<br>
+					<b>Service:</b> User research, software design, digital prototyping, data analysis<br>
+					<b>Team size:</b> 4 members working directly<br>
+					<b>Duration:</b> 1 year and 6 months<br>
+					<b>Tools used:</b> .NET, WPF, C#, Excel, SPSS<br>
+					<br>
+					<b>My roles:</b> (1) Prototype User Interfaces on WPF for different modules of an augmentative and alternative communication software; (2) Prototype input devices to control the system using accelerometers, eye-trackers, switches, electromyography; (3) Plan and execute user tests; (4) Data analysis based on user activity log.<br><br>
+					<b>Results:</b> Developed a prototype that allowed patients with ALS, hospitalized at the university hospital, to communicate with family members, caregivers and doctors. The different sensors allowed an easy customization for users to control the communication software.
+				</p>
+			</div>
 		</div>
-
 	</div>
-</div>
 </section>
 
 <!-- Portfolio Grid Section -->
@@ -108,15 +111,10 @@
     <div class="container content-section text-center">
     	<div class="row">
     		<h2>Portfolio</h2>
-
        		<div class="col-lg-8 col-lg-offset-2">
-      			<p>
-      				These are some of the works that I've been working recently.
-      			</p>
-      			<p>
-      			</p>
+      			<p style="margin-bottom: 30px">These are some of the works that I've been working recently.</p>
        		</div>
-	         <div class="row no-gutter popup-gallery">
+	        <div class="row no-gutter popup-gallery">
 	          	<div class="col-sm-6">
 	            	<a class="portfolio-box" href="#">
 		              	<img class="img-fluid" src="img/st/tb.jpg" alt="">
@@ -154,7 +152,7 @@
 		    </div>
 		    <div class="row no-gutter popup-gallery">
 			    <div class="col-sm-6">
-			            <a class="portfolio-box" href="#">
+			            <a class="portfolio-box" href="aac.html">
 			              	<img class="img-fluid" src="img/aac/tb.png" alt="">
 			              	<div class="portfolio-box-caption">
 			                	<div class="portfolio-box-caption-content">
@@ -166,8 +164,8 @@
 			                  		</div-->
 			                	</div>
 			             	 </div>
-			             	 <h4 class="projname">Alternative Communication for people with Severe Motor Dysfunction</h4>
-		              		 <h6 class="projdesc">ALS Patients, AAC, Wearables</h6>
+			             	 <h4 class="projname">AAC for people with severe motor dysfunction</h4>
+		              		 <h6 class="projdesc">ALS, AAC, Prototyping, User Testing, Data Analysis</h6>
 			            </a>
 			    </div>
 		        <div class="col-sm-6">
@@ -198,12 +196,9 @@
 		<div class="row">
 			<div class="col-lg-8 col-lg-offset-2">
 				<h2>Let's get in touch</h2>
-				<p>
-					 	Feel free to contact me!
-				</p>
-				<p>
-					<i><a href="mailto:dtgmariano@gmail.com" style="border-bottom:1px dashed #ccc;">dtgmariano@gmail.com</a></i>
-				</p>
+				<p>Are you interested in my work or wants to talk about one of my projects?<br>Drop me a line!</p>
+				<a href="mailto:dtgmariano@gmail.com" class="btnghost"><i class="fa fa-envelope"></i> dtgmariano@gmail.com</a>
+				<p></p>
 				<ul class="list-inline banner-social-buttons">
 					<li>
 					<a href="https://github.com/dtgmariano" target="_blank" class="btn btnghost btn-lg"><i class="fa fa-github fa-fw"></i><span class="network-name"> Github</span></a>
@@ -219,15 +214,6 @@
 		</div>
 	</div>
 </section>
-
-<!-- Footer -->
-<!--footer>
-	<div class="container text-center">
-		<p class="credits">
-			&copy; Daniel Mariano 2017
-		</p>
-	</div>
-</footer-->
 
 <!-- jQuery -->
 <script src="js/jquery.js"></script>
