--- a/aac.html
+++ b/aac.html
@@ -99,7 +99,7 @@
 					<b>Tools used:</b> .NET, WPF, C#, Excel, SPSS<br>
 					<br>
 					<b>My roles:</b> (1) Prototype User Interfaces on WPF for different modules of an augmentative and alternative communication software; (2) Prototype input devices to control the system using accelerometers, eye-trackers, switches, electromyography; (3) Plan and execute user tests; (4) Data analysis based on user activity log.<br><br>
-					<b>Results:</b> Developed a prototype that allowed patients with ALS, hospitalized at the university hospital, to communicate with family members, caregivers and doctors. The different sensors allowed an easy customization for users to control the communication software.
+					<b>Results:</b> Developed a prototype that allowed patients with ALS, hospitalized at the university hospital, to communicate with family members, caregivers and doctors. The different sensors allowed an easy customization for the users to control the communication software.
 				</p>
 			</div>
 		</div>
@@ -196,7 +196,7 @@
 		<div class="row">
 			<div class="col-lg-8 col-lg-offset-2">
 				<h2>Let's get in touch</h2>
-				<p>Are you interested in my work or wants to talk about one of my projects?<br>Drop me a line!</p>
+				<p>Are you interested in my work?<br>Send me a message!</p>
 				<a href="mailto:dtgmariano@gmail.com" class="btnghost"><i class="fa fa-envelope"></i> dtgmariano@gmail.com</a>
 				<p></p>
 				<ul class="list-inline banner-social-buttons">
