--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 		<div class="row">
 			<div class="col-lg-8 col-lg-offset-2">
 				<h2>Let's get in touch</h2>
-				<p>Are you interested in my work or wants to talk about one of my projects?<br>Drop me a line!</p>
+				<p>Are you interested in my work?<br>Send me a message!</p>
 				<a href="mailto:dtgmariano@gmail.com" class="btnghost"><i class="fa fa-envelope"></i> dtgmariano@gmail.com</a>
 				<p></p>
 				<ul class="list-inline banner-social-buttons">
