--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2">
 					<h1 class="brand-heading">Daniel Mariano</h1>
-					<p class="intro-text">UX Designer | Biomedical and Electrical Engineer</p>
+					<p class="intro-text">User Experience Designer</p>
 					<a style="margin-top: 180px" href="#about" class="btn btn-circle page-scroll">
 					<i class="fa fa-angle-double-down animated"></i>
 					</a>
@@ -91,7 +91,13 @@
 			<h2>ABOUT ME</h2>
 			<div class="col-lg-8 col-lg-offset-2">
 				<p>
-					I'm a User Experience Designer from Brazil, currently working within the <a class="extra" target="_blank" href="http://usitue.nl/">User System Interaction program at TU/e</a>. For the past four years, I've been  <a class="extra"target="_blank" href="http://ieeexplore.ieee.org/document/6880985/">designing assistive technologies solutions</a> for people with communication disorders. I'm inspired to create new solutions that can empower people's life. To support my skills as a UX professional, I have a background in Biomedical and Electrical Engineering!
+					I'm a User Experience Designer based in Eindhoven, The Netherlands, currently working within the <a class="extra" target="_blank" href="http://usitue.nl/">User System Interaction program at TU/e</a>.
+				</p>
+				<p>
+				 	For the past four years, I've been  <a class="extra"target="_blank" href="http://ieeexplore.ieee.org/document/6880985/">designing assistive technologies solutions</a> for people with communication disorders. I'm inspired to create new solutions that can empower people's life. 
+				</p>
+				<p>
+					To support my skills as a UX professional, I have a background in Biomedical and Electrical Engineering!
 				</p>
 				<p>
 					<a target="_blank" href="https://www.dropbox.com/s/isxzot3cu2rrqk9/mariano_resume_sep17.pdf?dl=0" class="btnghost"><i class="fa fa-download"></i> Curriculum Vitae</a>
